--- a/style.css
+++ b/style.css
@@ -14,4 +14,14 @@ h1 {
 }
 body {
   background-color: black;
+  cursor: none;
+  height: 99.8vh;
+}
+.cursour{
+  height: 20px;
+  width: 20px;
+  border-radius: 50px;
+  z-index: 1;
+  position: fixed;
+  box-shadow: 0px 0px 50px 10px rgba(255,255,255,1);
 }
